# autogluon-bench

./: .dockerignore  .gitignore  Dockerfile  README.md  bench_all.py  cdk.json  entrypoint.sh  lambda_invoke.sh  process_ablation.py  process_results.py  pyproject.toml  run_benchmarks.py  run_benchmarks.sh  runbenchmarks.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflow_scripts/: env_setup.sh  lint_check.sh  test_bench.sh
.github/workflows/: continuous_integration.yml  pypi_release.yml
benchmarks/: README.md  benchmark.py  run_benchmarks.py  run_benchmarks.sh
benchmarks/multimodal/: default_config.yaml  multimodal_benchmark.py  setup.sh
benchmarks/tabular/: benchmark_runner.sh  default_config.yaml  setup.sh  tabular_benchmark.py
benchmarks/time_series/: ts_benchmark.py
data/metadata/: README.md  task_metadata_old.csv
sample_configs/: bench_all.py  cloud_configs.yaml  det_cloud_configs.yaml  local_configs.yaml  multimodal_cloud_configs.yaml  multimodal_local_configs.yaml  paper_image_cloud_configs.yaml  paper_image_local_configs.yaml  paper_text_cloud_configs.yaml  paper_text_local_configs.yaml  paper_text_tabular_cloud_configs.yaml  paper_text_tabular_local_configs.yaml  tabular_cloud_configs.yaml  tabular_local_configs.yaml  timeseries_cloud_configs.yaml  timeseries_local_configs.yaml
sample_configs/amlb_configs/: config.yaml
sample_configs/cloud_configs/: bench_all.py  multimodal_local_configs.yaml  paper_image_local_configs.yaml  paper_text_local_configs.yaml  paper_text_tabular_local_configs.yaml  tabular_local_configs.yaml  timeseries_cloud_configs.yaml
sample_configs/cloud_configs/custom_metrics/: sample_metrics.py
sample_configs/cloud_configs/resources/: bench_all.py  multimodal_constraints.yaml  multimodal_frameworks.yaml
sample_configs/constraints/: custom_constraints.yaml
sample_configs/dataloaders/: paper_text_datasets.yaml  paper_text_tabular_datasets.yaml  tabular_dataloader.py  text_dataloader.py  text_datasets.yaml  text_tabular_dataloader.py  text_tabular_datasets.yaml  vision_dataloader.py  vision_datasets.yaml
sample_configs/resources/: multimodal_constraints.yaml  multimodal_frameworks.yaml
scripts/: runbenchmarks.py
src/autogluon/bench/: .dockerignore  Dockerfile  benchmark.py  entrypoint.sh  main.py  runbenchmark.py  runbenchmarks.py
src/autogluon/bench/cloud/aws/: app.py  constants.py  default_config.yaml  deploy.sh  destroy.sh  lambda_function.py  run_deploy.py  stack_handler.py
src/autogluon/bench/cloud/aws/batch_stack/: stack.py
src/autogluon/bench/cloud/aws/batch_stack/constructs/: batch_lambda_function.py  instance_profile.py
src/autogluon/bench/cloud/aws/batch_stack/lambdas/: lambda_function.py  requirements.txt
src/autogluon/bench/cloud/aws/batch_stack/lambdas/amlb_configs/: __init__.py
src/autogluon/bench/cloud/aws/docker/: Dockerfile  entrypoint.sh
src/autogluon/bench/custom_configs/amlb_configs/: __init__.py
src/autogluon/bench/custom_configs/dataloaders/: image_dataloader.py  paper_image_datasets.yaml  paper_text_datasets.yaml  paper_text_tabular_datasets.yaml  text_dataloader.py  text_datasets.yaml  vision_dataloader.py
src/autogluon/bench/custom_configs/resources/: multimodal_frameworks.yaml
src/autogluon/bench/datasets/: constants.py  dataset_registry.py  multimodal_dataset.py  multimodal_dataset_registry.py  object_detection_dataset.py  registry.py  utils.py
src/autogluon/bench/eval/aggregate/: aggregate.py  results.py
src/autogluon/bench/eval/benchmark_context/: output_context.py  output_suite_context.py  utils.py
src/autogluon/bench/eval/evaluation/: benchmark_evaluator.py  constants.py  evaluate_results.py  evaluate_utils.py
src/autogluon/bench/eval/evaluation/metadata/: metadata_generator.py  metadata_loader.py
src/autogluon/bench/eval/evaluation/preprocess/: preprocess_openml.py  preprocess_utils.py
src/autogluon/bench/eval/hardware_metrics/: hardware_metrics.py
src/autogluon/bench/eval/scripts/: aggregate_amlb_results.py  run_evaluation_openml.py  run_generate_clean_openml.py
src/autogluon/bench/frameworks/: benchmark.py
src/autogluon/bench/frameworks/autokeras/: autokeras_benchmark.py  exec.py  setup.sh  test.py
src/autogluon/bench/frameworks/multimodal/: exec.py  multimodal_benchmark.py  requirements.txt  setup.sh
src/autogluon/bench/frameworks/tabular/: default_config.yaml  exec.sh  setup.sh  tabular_benchmark.py
src/autogluon/bench/frameworks/tabular_reg/: exec.py  setup.sh  tabular_reg_benchmark.py
src/autogluon/bench/frameworks/timeseries/: exec.sh  setup.sh  timeseries_benchmark.py
src/autogluon/bench/resources/: multimodal_constraints.yaml  multimodal_frameworks.yaml
src/autogluon/bench/scripts/: generate_cloud_configs.py
src/autogluon/bench/stacks/: lambda.py  run_deploy.py
src/autogluon/bench/stacks/batch_stack/: stack.py
src/autogluon/bench/stacks/batch_stack/constructs/: batch_lambda_function.py
src/autogluon/bench/utils/: dataset_utils.py  general_utils.py  gpu_utilization.sh  hardware_utilization.sh
stacks/: deploy.sh  requirements.txt  run_deploy.py
stacks/batch_stack/: stack.py
stacks/batch_stack/constructs/: batch_lambda_function.py  instance_profile.py
tests/unittests/benchmark/: conftest.py  test_benchmark.py  test_runbenchmarks.py
tests/unittests/cloud/aws/: conftest.py  test_run_deploy.py  test_stack.py  test_stack_handler.py
tests/unittests/datasets/: test_registry.py  test_utils.py
tests/unittests/evaluation/hardware_metrics/: test_hardware_metrics.py
tests/unittests/evaluation/hardware_metrics/resources/: expected_metrics.py  results.csv  test_config.yaml
tests/unittests/utils/: test_dataset_utils.py  test_general_utils.py
