[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon.bench"
dynamic = ["version"]
description = "A benchmarking tool for AutoML"
authors = [{name = "AutoGluon Community"}]
readme = "README.md"
requires-python = ">=3.9, <3.12"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Recognition"
]
dependencies = [
    "autogluon.common >=1, <2",
    "aws-cdk-lib >=2.0.0,<3",
    "aws-cdk.aws-batch-alpha >=2.0.0a1,<2.70.0a0",
    "awscliv2 >=2.2,<2.4",
    "boto3 >=1.26.0,<2",
    "constructs >=10.0.0,<10.5",
    "fsspec >=2023.5.0,<2024.6",
    "matplotlib >=3.4,<3.10",
    "pandas >=2.0.0,<3",
    "pyyaml >=5.4,<7",
    "ray[default] >=2.6.3,<3",
    "s3fs >=2023.5.0,<2024.6",
    "tqdm >=4.64.0,<=5",
    "typer >=0.9.0,<1.0.0",
    "wheel >0.38.0,<0.46",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-mock", "tox", "black>=23.1.9, <=23.7.0", "isort>=5.11.0, <=5.13.2"]

[project.urls]
"Homepage" = "https://github.com/autogluon/autogluon-bench"
"Bug Reports" = "https://github.com/autogluon/autogluon-bench/issues"

[project.scripts]
agbench = "autogluon.bench.main:app"

# Testing and formatting configurations
[tool.black]
line-length = 119
target-version = ['py39', 'py310', 'py311']

[tool.isort]
known_first_party = "autogluon"
known_third_party = [
    "numpy",
    "pandas",
    "psutil",
    "pytest",
    "Pillow",
    "boto3"
]
line_length = 119
profile = "black"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    envlist = py39, py310, py311
    isolated_build = True

    [testenv]
    deps = 
        pytest
        pytest-mock
    commands = pytest

    [testenv:lint]
    deps = 
        black>=23.1.9, <=23.7.0
        isort>=5.11.0, <=5.13.2
    commands = 
        black --check --diff src/ tests/
        isort --check --diff src/ tests/
"""

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--strict-markers"
xfail_strict = true

[tool.setuptools_scm]
write_to = "src/autogluon/bench/version.py"
